tests/fixtures/invalid/bytes_bitxor_bytes.py
# Cannot bitwise XOR Bytes and Bytes
x: bytes = b"hello" ^ b"hello"
